compiler/tests/compiler/must_fail/t_05.mil
extern fn test() {
  x[i] : stack u64;
}

/*
START:CMD
ARG="print[input]"
END:CMD
*/
